--- a/index.html
+++ b/index.html
@@ -23,23 +23,39 @@
         <thead>
             <tr><th>Country</th><th>Student Count</th></tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+            <tr><td>Bangladesh</td><td>1</td></tr>
+            <tr><td>Brazil</td><td>9</td></tr>
+            <tr><td>Canada</td><td>7</td></tr>
+            <tr><td>Chile</td><td>1</td></tr>
+            <tr><td>China</td><td>13</td></tr>
+            <tr><td>Colombia</td><td>5</td></tr>
+            <tr><td>Cuba</td><td>1</td></tr>
+            <tr><td>Dominican Republic</td><td>1</td></tr>
+            <tr><td>Egypt</td><td>1</td></tr>
+            <tr><td>El Salvador</td><td>1</td></tr>
+            <tr><td>Germany</td><td>1</td></tr>
+            <tr><td>India</td><td>8</td></tr>
+            <tr><td>Japan</td><td>13</td></tr>
+            <tr><td>Korea (Republic of)</td><td>3</td></tr>
+            <tr><td>Mexico</td><td>24</td></tr>
+            <tr><td>Morocco</td><td>1</td></tr>
+            <tr><td>Myanmar</td><td>1</td></tr>
+            <tr><td>Netherlands</td><td>1</td></tr>
+            <tr><td>Nicaragua</td><td>1</td></tr>
+            <tr><td>Pakistan</td><td>3</td></tr>
+            <tr><td>Peru</td><td>1</td></tr>
+            <tr><td>Philippines</td><td>1</td></tr>
+            <tr><td>Poland</td><td>1</td></tr>
+            <tr><td>Russian Federation</td><td>6</td></tr>
+            <tr><td>Spain</td><td>2</td></tr>
+            <tr><td>Thailand</td><td>1</td></tr>
+            <tr><td>Tunisia</td><td>1</td></tr>
+            <tr><td>Turkey</td><td>2</td></tr>
+            <tr><td>Ukraine</td><td>1</td></tr>
+            <tr><td>United Kingdom</td><td>2</td></tr>
+            <tr><td>United States of America</td><td>193</td></tr>
+        </tbody>
     </table>
-    <script>
-        async function fetchStudentData() {
-            try {
-                const response = await fetch('https://your-api-endpoint');
-                if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
-                const data = await response.json();
-                const tableBody = document.querySelector('#studentTable tbody');
-                tableBody.innerHTML = data.map(row =>
-                    `<tr><td>${row.Country}</td><td>${row.StudentCount}</td></tr>`
-                ).join('');
-            } catch (error) {
-                console.error("Error fetching student data:", error);
-            }
-        }
-        fetchStudentData();
-    </script>
 </body>
 </html>
