--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Student Count by Country</title>
+    <title>Student Count by Country - by YASWANTH GANGULA </title>
     <style>
         table {
             width: 50%;
