--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Student Count by Country - by YASWANTH GANGULA </title>
+    <title>Student Count by Country</title>
     <style>
         table {
             width: 50%;
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Student Count by Country</h1>
+    <h1>Student Count by Country - YASWANTH GANGULA - M16552731 </h1>
     <table id="studentTable">
         <thead>
             <tr><th>Country</th><th>Student Count</th></tr>
